syntax = "proto3";

package blog;

service BlogService {

  rpc ReadBlog (ReadBlogRequest) returns (ReadBlogResponse);
  rpc CreateBlog (CreateBlogRequest) returns (CreateBlogRequest){};
  rpc ListBlog (ListBlogRequest) returns (stream ListBlogResponse) {};
}

message ReadBlogRequest {
  string blog_id = 1;
}

message ReadBlogResponse {
  Blog blog = 1;
}

message CreateBlogRequest {
  Blog blog = 1;
}

message CreateBlogResponse {
  Blog blog = 1;
}

message Blog {
  string id = 1;
  string author = 2;
  string title = 3;
  string content = 4;
}

message ListBlogRequest {}

message ListBlogResponse {
  Blog blog = 1;
}