syntax = "proto3";

package calculator;


service CalculatorService {
  // Unary API
  rpc Sum (SumRequest) returns (SumResponse) {};

  // Srreaming API
  rpc PrimeNumberDecomposition  (PrimeNumberDecompositionRequest) returns (PrimeNumberDecompositionResponse);


  // error handling
  // write more about this....
  rpc SquareRoot (SquareRootRequest) returns (SquareRootResponse) {};
}

message SquareRootRequest {
  int32 number = 1;
}
message SquareRootResponse {
  double number_root = 1;
}

message PrimeNumberDecompositionRequest {
  int32 number = 1;
}

message PrimeNumberDecompositionResponse {
  int32 prime_factor = 1;
}


message SumRequest {
  int32 first_number = 1;
  int32 second_number = 2;
}

message SumResponse {
  int32 sum_result = 1;
}